doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Data Structures
-d
C:\Data Structures\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Data Structures\ChainReaction.java
<---- end of javadoc command ---->
Loading source file C:\Data Structures\ChainReaction.java...
Constructing Javadoc information...
Standard Doclet version 1.8.0_40
Building tree for all the packages and classes...
Generating C:\Data Structures\doc\ChainReaction.html...
Generating C:\Data Structures\doc\package-frame.html...
Generating C:\Data Structures\doc\package-summary.html...
Generating C:\Data Structures\doc\constant-values.html...
Generating C:\Data Structures\doc\serialized-form.html...
C:\Data Structures\BST.java:44: error: ';' expected
            System.out.println(B.get())
                                       ^
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Data Structures\doc\allclasses-frame.html...
Generating C:\Data Structures\doc\allclasses-noframe.html...
Generating C:\Data Structures\doc\index.html...
Generating C:\Data Structures\doc\stylesheet.css...
1 error
